--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <p class="indent">Upon comissioning from USNA, I served a tour on USS Gonzalez (DDG 66) as the Auxiliaries Officer and performed the duties as the Ship's 
         Quality Assurance Officer and 1 of 2 Anti-Submarine Warfare Evaluators. I served on USS Princeton (CG 59) as the Damage Control Assistant where I continued to 
         be 1 of 2 ASWEs. I am currently serving as a Training Liason Officer at Littoral Combat Ship Squadron One (LCSRON ONE).</p>
-      <p class="indent">On my free time I like to build and program robots, workout, play soccer and binge watch Netflix shows. My all time favorite show is the 
-        Mighty Morphin Power Rangers. I may or may not have an unhealthy obsession for the Green Power ranger. I enjoy watching movies1 as well, my favorite genre is 
-        definitely comedy and all of the Marvel movies.</p>
+      <p class="indent">On my free time I like to build and program robots, workout, play/watch soccer, work on home improvement and binge watch Netflix shows. My all time favorite show is the 
+        Mighty Morphin Power Rangers. I may or may not have an unhealthy obsession for the Green Power ranger. I enjoy watching movies as well, my favorite genre is 
+        generally comedy and all of the Marvel movies.</p>
     </div>
 
       <div class="footer">
